--- a/minimo/index.html
+++ b/minimo/index.html
@@ -12,12 +12,14 @@
 <body>
       <div class="header">
           <div class="logo"><p>Minimø</p></div>
+		  <nav id="menu" class="menu">
                 <div class="header-grid-container">
                     <div class="nav-lifestyle"><a href="#">lifestyle</a></div>
                     <div class="nav-photodiary"><a href="#">photodiary</a></div>
                     <div class="nav-music"><a href="#">music</a></div>
                     <div class="nav-travel"><a href="#">travel</a></div>
                 </div>
+		  </nav>
                     <div class="bg-image">
                         <img src="img/bg.jpg" alt="" width="1060px">
                     </div>
