fixed policy display on mobile

--- a/minimo/index.html
+++ b/minimo/index.html
@@ -166,7 +166,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-lg-12">
-						<ul>
+						<ul class="social">
 							<li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#!"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#!"><i class="fab fa-instagram"></i></a></li>
