--- a/creatives/index.html
+++ b/creatives/index.html
@@ -13,33 +13,34 @@
 
 <body>
 	<header>
-		<nav class="header nav">
-			<div class="container">
-				<div class="row">
-					<div class="col-12 col-md-1">
-						<img src="img/logo.png" alt="logo" class="logo" />
-					</div>
-					<ul class="menu d-flex ml-auto">
-						<li class="menu__item"><a href="index.html" class="active">Home</a></li>
-						<li class="menu__item"><a href="#!">Pages</a></li>
-						<li class="menu__item"><a href="#!">Features</a></li>
-						<li class="menu__item"><a href="#!">Extensions</a></li>
-						<li class="menu__item"><a href="#!">Tutorials</a></li>
-						<li class="menu__item"><a href="#!">Contact us</a></li>
-						<li class="menu__item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
-						<li class="menu__item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
-						<li class="menu__item"><a href="#!"><i class="fab fa-skype"></i></a></li>
-						<li class="menu__item"><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
-					</ul>
-				</div><!-- //row -->
-			</div><!-- //container -->
-		</nav><!-- //header nav -->
-		<section class="site-title">
-			<h1>Creatives</h1>
-			<p>Power by PSDfreebies.com</p>
-		</section><!-- //site-title -->
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-md-1">
+					<img src="img/logo.png" alt="logo" class="logo" />
+				</div>
+				<ul class="menu d-flex ml-auto">
+					<li class="menu__item"><a href="index.html" class="active">Home</a></li>
+					<li class="menu__item"><a href="#!">Pages</a></li>
+					<li class="menu__item"><a href="#!">Features</a></li>
+					<li class="menu__item"><a href="#!">Extensions</a></li>
+					<li class="menu__item"><a href="#!">Tutorials</a></li>
+					<li class="menu__item"><a href="#!">Contact us</a></li>
+					<li class="menu__item"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+					<li class="menu__item"><a href="#!"><i class="fab fa-twitter"></i></a></li>
+					<li class="menu__item"><a href="#!"><i class="fab fa-skype"></i></a></li>
+					<li class="menu__item"><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+				</ul>
+			</div><!-- //row -->
+		</div><!-- //container -->
 	</header>
-	<section class="features">
+	<section class="site-title">
+	<h1>Creatives</h1>
+		<p>Power by PSDfreebies.com</p>
+	</section><!-- //site-title -->
+	<div id="scroll">
+		<span>Scroll Down</span> <br><br><a href="#features"><i class="fas fa-chevron-down"></i></a>
+	</div>
+	<section class="features" id="features">
 		<p class="bl">W</p>
 		<h2 class="stn_title">We Are An Awesome Agency</h2>
 		<div class="container">
@@ -79,6 +80,7 @@
 		<p class="bl">B</p>
 		<h2 class="stn_title">Let's blog</h2>
 		<div class="container">
+		<h4>We love clean design and advanced digital solutions.</h4>
 			<div class="row">
 				<div class="col-md-3">
 					<div class="blog__item">
