--- a/gzhel/index.html
+++ b/gzhel/index.html
@@ -32,7 +32,7 @@
 			<h1>Гжель</h1>
 			<h2>Символ безупречного вкуса</h2>
 		</div>
-			<div class="parallax-window" data-parallax="scroll" data-image-src="img/banner.jpg"></div>
+			<div class="parallax-window" data-parallax="scroll" data-image-src="/img/banner.jpg"></div>
 				
 	</header>
 	<section class="banners-top">
