--- a/gzhel/index.html
+++ b/gzhel/index.html
@@ -58,7 +58,7 @@
 	    <a href="https://www.posylka.de/de/themenwelt/sammlung-gschel/tischaccessoires.html"><img src="img/gzhel-fantasy.JPG" alt="гжельская фантазия"></a>
 	    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-js-ripple-effect" onclick="location.href='https://www.posylka.de/de/themenwelt/sammlung-gschel/tischaccessoires.html'">Подробнее</button>
 	    <p>Посудный набор Гжельская фантазия &ndash; гармоничное сочетание традиционных гжельских мотивов и утонченного вкуса, наполнение чарующей атмосферой душевности и нарядности</p>
-	    <h3 style="margin: 50px 0 0">Когда каждая деталь &ndash; шедевр</h3>
+	    <h3 style="">Когда каждая деталь &ndash; шедевр</h3>
 	    <div class="container">
             <div class="item">
                 <a href="#!"><img src="img/electro-teapot.jpg" alt="Керамический электрочайник"></a>
@@ -109,29 +109,6 @@
 			</div>
 		</div>
 	</section>
-	
-
-
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>    
 	<script type="text/javascript" src="libs/parallax.min.js"></script>
