--- a/gzhel/index.html
+++ b/gzhel/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<header>
-		<a href="#" id="scroll" style="display: none;"><span></span></a>	<!-- scroll to top -->
+		<a href="#" id="scroll"><span></span></a>	<!-- scroll to top -->
 		<div class="banner">
 			<h2>Посудная коллекция</h2>
 			<h1>Гжель</h1>
