--- a/blueasy/index.html
+++ b/blueasy/index.html
@@ -19,6 +19,7 @@
 					<div class="col-lg-3">
 						<img src="img/logo.png" alt="" class="logo" />
 					</div>
+					<div class="col col-sm-2 ml-auto"></div>
 					<ul class="menu d-flex justify-content-center">
 						<li class="menu__item"><a href="index.html">Home</a>
 						</li>
