--- a/gzhel/index.html
+++ b/gzhel/index.html
@@ -110,7 +110,8 @@
 		</div>
 	</section>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
+	<!--  JQuery  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/parallax.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     
