--- a/newagetest/index.html
+++ b/newagetest/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -19,159 +19,159 @@
 </head>
 
 <body>
-    
-        <header class="header">
-            <div class="lang-change-container">
-                <ul class="lang-change">
-                    <li><a href="#!">Eng</a></li>
-                    <li><a href="#!">Aze</a></li>
-                    <li><a href="#!" class="present">Рус</a></li>
-                </ul>
-            </div>
-            <div class="header-bg"></div>
-            <div class="container">
-                <div class="header-links">
-                    <div class="logo">
-                        <p>Logo</p>
-                    </div>
-                    <div class="links-list">
-                        <ul>
-                            <li><a href="#!">Lorem ipsum dolor sit</a></li>
-                            <li><a href="#!">Lorem ipsum</a></li>
 
-                            <li><a href="#!">Lorem ipsum dolor</a></li>
-                            <li><a href="#!">Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing</a></li>
-
-                            <li><a href="#!">Lorem ipsum dolor</a></li>
-                            <li><a href="#!">Lorem ipsum dolor sit</a></li>
-                        </ul>
-                    </div><!-- //links_list -->
-                </div><!-- //header_links -->
-
-                <div class="topnav" id="myTopnav">
-                    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                        <h2>Меню</h2>
-                    </a>
-                    <a href="#!">Пункт меню</a>
-                    <a href="#!">Длинный пункт меню</a>
-                    <a href="#!">Очень длинный пункт меню</a>
-                    <a href="#!">Еще пункт</a>
-                    <a href="#!">П. меню</a>
-
+    <header class="header">
+        <div class="lang-change-container">
+            <ul class="lang-change">
+                <li><a href="#!">Eng</a></li>
+                <li><a href="#!">Aze</a></li>
+                <li><a href="#!" class="present">Рус</a></li>
+            </ul>
+        </div>
+        <div class="header-bg"></div>
+        <div class="container">
+            <div class="header-links">
+                <div class="logo">
+                    <p>Logo</p>
                 </div>
-            </div><!-- //container -->
-        </header>
+                <div class="links-list">
+                    <ul>
+                        <li><a href="#!">Lorem ipsum dolor sit</a></li>
+                        <li><a href="#!">Lorem ipsum</a></li>
 
-        <section class="form">
-            <div class="container">
-                <h2>Form</h2>
-                <div class="inner-container">
-                    <div class="inputs">
-                        <div class="items-large">
-                            <div class="input-item">
-                                <label for="input-1">Label #1</label>
-                                <input type="text" name="input-1" class="input-1">
-                            </div>
-                        </div>
+                        <li><a href="#!">Lorem ipsum dolor</a></li>
+                        <li><a href="#!">Lorem ipsum dolor sit amet,
+                                consectetur adipiscing</a></li>
 
-                        <div class="items-regular">
-                            <div class="input-item">
-                                <label for="input-2">Label #2</label>
-                                <input type="text" name="input-2" class="input-2">
-                            </div>
-                            <div class="input-item">
-                                <label for="input-3">Label #3</label>
-                                <input type="text" name="input-3" class="input-3">
-                            </div>
-                            <div class="input-item">
-                                <label for="input-2">Label #2</label>
-                                <input type="text" name="input-2" class="input-2">
-                            </div>
-                            <div class="input-item">
-                                <label for="input-3">Label #3</label>
-                                <input type="text" name="input-3" class="input-3">
-                            </div>
-                            <div class="input-item">
-                                <label for="input-2">Label #2</label>
-                                <input type="text" name="input-2" class="input-2">
-                            </div>
-                            <div class="input-item">
-                                <label for="input-3">Label #3</label>
-                                <input type="text" name="input-3" class="input-3">
-                            </div>
+                        <li><a href="#!">Lorem ipsum dolor</a></li>
+                        <li><a href="#!">Lorem ipsum dolor sit</a></li>
+                    </ul>
+                </div><!-- //links_list -->
+            </div><!-- //header_links -->
 
-                            <a href="#!" class="btn-submit">Submit</a>
+            <div class="topnav" id="myTopnav">
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                    <h2>Меню</h2>
+                </a>
+                <a href="#!">Пункт меню</a>
+                <a href="#!">Длинный пункт меню</a>
+                <a href="#!">Очень длинный пункт меню</a>
+                <a href="#!">Еще пункт</a>
+                <a href="#!">П. меню</a>
+
+            </div>
+        </div><!-- //container -->
+    </header>
+
+    <section class="form">
+        <div class="container">
+            <h2>Form</h2>
+            <div class="inner-container">
+                <div class="inputs">
+                    <div class="items-large">
+                        <div class="input-item">
+                            <label for="input-1">Label #1</label>
+                            <input type="text" name="input-1" class="input-1">
                         </div>
                     </div>
 
-                    <div class="banner">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-                        <p><b>Ut enim ad minim veniam, quis nostrud exercitation</b></p>
+                    <div class="items-regular">
+                        <div class="input-item">
+                            <label for="input-2">Label #2</label>
+                            <input type="text" name="input-2" class="input-2">
+                        </div>
+                        <div class="input-item">
+                            <label for="input-3">Label #3</label>
+                            <input type="text" name="input-3" class="input-3">
+                        </div>
+                        <div class="input-item">
+                            <label for="input-2">Label #2</label>
+                            <input type="text" name="input-2" class="input-2">
+                        </div>
+                        <div class="input-item">
+                            <label for="input-3">Label #3</label>
+                            <input type="text" name="input-3" class="input-3">
+                        </div>
+                        <div class="input-item">
+                            <label for="input-2">Label #2</label>
+                            <input type="text" name="input-2" class="input-2">
+                        </div>
+                        <div class="input-item">
+                            <label for="input-3">Label #3</label>
+                            <input type="text" name="input-3" class="input-3">
+                        </div>
 
-                        <a href="#!" class="btn-more">More</a>
+                        <a href="#!" class="btn-submit">Submit</a>
                     </div>
+                </div>
+
+                <div class="banner">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
+                    <p><b>Ut enim ad minim veniam, quis nostrud exercitation</b></p>
+
+                    <a href="#!" class="btn-more">More</a>
                 </div>
             </div>
-        </section>
-        <section class="cards">
-            <div class="container">
-                <div class="cards-item">
-                    <div class="image"></div>
-                    <div class="description">
-                        <h3>Lorem ipsum dolor sit</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
-                    </div>
+        </div>
+    </section>
+    <section class="cards">
+        <div class="container">
+            <div class="cards-item">
+                <div class="image"></div>
+                <div class="description">
+                    <h3>Lorem ipsum dolor sit</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
                 </div>
-                <div class="cards-item">
-                    <div class="image"></div>
-                    <div class="description">
-                        <h3>Lorem ipsum</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
-                    </div>
-                </div>
-                <div class="cards-item">
-                    <div class="image"></div>
-                    <div class="description">
-                        <h3>Lorem ipsum dolor</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor Lorem</p>
-                    </div>
-                </div>
-            </div><!-- //container -->
-        </section><!-- //cards -->
-        <section class="small-cards">
-            <div class="container">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-
-            </div><!-- //container -->
-            <a href="#!" id="loadMore">More</a>
-        </section><!-- //small-cards -->
-        <section class="order-cards">
-            <div class="container">
-                <div class="item-1">21.1</div>
-                <div class="item-2">21.2</div>
-                <div class="item-3">21.3</div>
-                <div class="item-4">21.4</div>
-                <div class="item-5">21.5</div>
-                <div class="item-6">21.6</div>
-                <div class="item-7">21.7</div>
-                <div class="item-8">21.8</div>
-                <div class="item-9">21.9</div>
             </div>
-        </section><!-- //order-cards -->
-        <div class="bottom-background"></div>
+            <div class="cards-item">
+                <div class="image"></div>
+                <div class="description">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do</p>
+                </div>
+            </div>
+            <div class="cards-item">
+                <div class="image"></div>
+                <div class="description">
+                    <h3>Lorem ipsum dolor</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor Lorem</p>
+                </div>
+            </div>
+        </div><!-- //container -->
+    </section><!-- //cards -->
+    <section class="small-cards">
+        <div class="container">
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+            <div class="item"></div>
+
+        </div><!-- //container -->
+        <a href="#!" id="loadMore">More</a>
+    </section><!-- //small-cards -->
+    <section class="order-cards">
+        <div class="container">
+            <div class="item-1">21.1</div>
+            <div class="item-2">21.2</div>
+            <div class="item-3">21.3</div>
+            <div class="item-4">21.4</div>
+            <div class="item-5">21.5</div>
+            <div class="item-6">21.6</div>
+            <div class="item-7">21.7</div>
+            <div class="item-8">21.8</div>
+            <div class="item-9">21.9</div>
+        </div>
+    </section><!-- //order-cards -->
+    <div class="bottom-background"></div>
 </body>
 
 </html>
